# manual_pointcloud_alignment

./: CMakeLists.txt  README.md  package.xml
include/manual_pointcloud_alignment/: interactive_marker_pointcloud_alignment.h  manual_pointcloud_alignment.h  service_pointcloud_alignment.h  terminal_pointcloud_alignment.h
launch/: interactive_markers.launch
param/: alignment_example.yaml  manual_pointcloud_alignment_preprocess.yaml
src/: example_client.cpp  interactive_marker_pointcloud_alignment.cpp  manual_pointcloud_alignment.cpp  service_pointcloud_alignment.cpp  terminal_pointcloud_alignment.cpp
srv/: manual_alignment_service.srv  transform_input_service.srv
